# Rust-AuthService

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  Readme.md  docker-compose.yml  drawSQL-pgsql-export-2024-02-27.sql
migrations/2024-02-24-053142_create_user_table/: up.sql
migrations/2024-02-24-053246_email_unique_field/: down.sql  up.sql
migrations/2024-02-25-042206_create_table/: up.sql
migrations/2024-02-26-061602_create_students_shools/: down.sql  up.sql
migrations/2024-02-26-061816_create_schedules/: down.sql  up.sql
migrations/2024-02-27-035500_create_more_tables/: down.sql  up.sql
migrations/2024-02-27-044847_add_constrains/: down.sql  up.sql
migrations/2024-03-01-045612_create_tables/: down.sql  up.sql
migrations/2024-03-01-212355_created_users_table/: up.sql
migrations/2024-03-01-212413_created_schools_table/: down.sql  up.sql
migrations/2024-03-01-212430_created_students_table/: down.sql  up.sql
migrations/2024-03-01-212450_created_classes_table/: down.sql  up.sql
migrations/2024-03-01-212603_created_schedules_table/: down.sql  up.sql
migrations/2024-03-02-012121_change_to_time_type/: down.sql  up.sql
src/: main.rs  schema.rs  tables.rs
src/configs/: common.rs
src/databases/: async_postgres.rs  mod.rs
src/helper/: enums.rs  exceptions.rs  logger.rs  mod.rs  swagger_docs.rs  type_alias.rs  utils.rs
src/interfaces/: repository_interface.rs
src/middlewares/: mod.rs  timer_middleware.rs
src/models/: class_model.rs  mod.rs  schedule_model.rs  school_model.rs  student_model.rs  user_model.rs  user_models.rs
(+28 files in other folders)
