[package]
name = "crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "crud"
path = "src/main.rs"

# Performance config
[profile.release]
lto = false # Disable LTO (Link Time Optimization). This is a trade-off between compile time and runtime performance.
codegen-units = 1
opt-level = 3
#debug = 1
#panic = "abort"


[dependencies]
actix-web = "4.5.1"
bb8 = "0.8.3"
bcrypt = "0.15.0"
chrono = { version = "0.4.34", features = ["serde"] }
colored = "2.1.0"
diesel = { version = "2.1.4", features = ["uuid", "chrono"] }
diesel-async = { version = "0.4.1", features = ["r2d2", "postgres", "bb8"] }
env_logger = "0.11.2"
envy = "0.4.2"
fern = { version = "0.6.2", features = ["colored"] }
log = "0.4.20"
log4rs = "1.3.0"
r2d2 = "0.8.10"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
futures-util = "0.3.30"
rand = "0.8.5"
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web", "debug-embed"] }
num_cpus = "1.16.0"


